Update: fucntion create book
